# driving_public

./: .gitignore  README.md  rosinstall
blf/: CMakeLists.txt  package.xml
blf/include/blf/: blf.h  convert.h  llf.h  vlf.h
blf/src/: blf.cpp  convert.cpp  llf.cpp  test_conversion.cpp  test_read_llf.cpp  vlf.cpp
dgc_transform/: CMakeLists.txt  package.xml
dgc_transform/include/dgc_transform/: dgc_transform.h
dgc_transform/src/: dgc_transform.cpp  tfm_broadcaster.cpp
ladybug_playback/: CMakeLists.txt  FindDC1394.cmake  nodelet_plugins.xml  package.xml
ladybug_playback/cfg/: LadybugRecombine.cfg
ladybug_playback/include/ladybug_playback/: frame_separator.h  recombine.h  subscriber.h
ladybug_playback/launch/: frame_separator_nodelet.launch  raw_playback.launch  recombine_nodelet.launch
ladybug_playback/src/: subscriber.cpp
ladybug_playback/src/recombine/: recombine.cpp  recombine_node.cpp  recombine_node_base.cpp  recombine_node_base.h  recombine_nodelet.cpp
ladybug_playback/src/separator/: frame_separator.cpp  frame_separator_base.cpp  frame_separator_base.h  frame_separator_node.cpp  frame_separator_nodelet.cpp  pgr_compressor_header_info.cpp  pgr_compressor_header_info.h  separated_frames_publisher.cpp
localize/: CMakeLists.txt  doc.txt  package.xml
localize/include/localize/: applanix_transformer.h  fake_localizer.h  localizer_base.h
localize/launch/: raw_playback.launch
localize/src/: add_gps_offset.cpp  applanix_transformer.cpp  fake_localizer.cpp  fake_localizer_node.cpp  gps_fix_pub.cpp  localize_pose_tf_broadcaster.cpp  localizer_base.cpp  smooth_odom_tf_publisher.cpp
log_and_playback/: CMakeLists.txt  FindGperftools.cmake  camera_raw_playback.launch  log_run  package.xml  raw_playback  raw_playback.launch  sample_imu_reader.cpp
log_and_playback/include/log_and_playback/: abstract_data_reader.h  bag_reader.h  bag_tf_listener.h  data_reader.h  dgclog_reader.h  dgclogio.h  imu_kitti.h  kittireader.h  robot_model.h  spin_reader.h  spinello.h
log_and_playback/scripts/: rxplot  topic_size
log_and_playback/src/: bag_reader.cpp  bag_tf_listener.cpp  bag_to_dgc_converter.cpp  data_reader.cpp  dgclog_playback.cpp  dgclog_reader.cpp  dgclogio.cpp  example_spin_reader.cpp  imu_kitti.cpp  imu_kitti2.cpp  kittireader.cpp  log_playback.cpp  profile_velodyne.cpp  robot_model.cpp  sample_imu_reader.cpp  spin_reader.cpp  spinello.cpp  split_bags.cpp
log_and_playback/wiki/: '  wiki_annotate  wiki_checkout  wiki_push  wiki_report  wiki_util.py
stdr_msgs/: CMakeLists.txt  myrule.bmr  package.xml
stdr_msgs/msg/: Actuator.msg  AnnotatedVehicle.msg  AnnotatedVehicleArray.msg  ApplanixDMI.msg  ApplanixGPS.msg  ApplanixPose.msg  ApplanixRMS.msg  CanStatus.msg  DynamicObstacle.msg  EStopStatus.msg  LabeledTrack.msg  LadybugImages.msg  LocalizePose.msg  MovingBox.msg  ObstaclePrediction.msg  PassatExtOutput.msg  PassatOutput.msg  PassatState.msg  PassatStatus.msg  PathBundle.msg  PerceptionObstacles.msg  PointWithCurve.msg  PointWithCurveArray.msg  RawScan.msg  RawScans.msg  TrafficLightPose.msg  TrafficLightState.msg  TrafficLightStates.msg  Trajectory2D.msg  Trajectory2DBundle.msg  TrajectoryPoint2D.msg  TurnSignal.msg  VelConfig.msg  VelStat.msg
stdr_msgs/srv/: IgnoreROWVehicle.srv
stdr_velodyne/: CMakeLists.txt  nodelet_plugins.xml  package.xml
stdr_velodyne/cfg/: Aggregator.cfg
stdr_velodyne/cmake/: stdr_velodyne-extras.cmake.in
stdr_velodyne/include/stdr_velodyne/: config.h  conversion.h  message_filter.h  point_type.h  pointcloud.h  support.h  transform.h
stdr_velodyne/launch/: driver_node.launch  driver_nodelet_and_manager.launch  driver_params.yaml  raw_playback.launch  velodyne.launch
stdr_velodyne/src/: aggregator_node.cpp  fake_velodyne_pcd.cpp  message_filter.cpp  support.cpp  transform.cpp
stdr_velodyne/src/conversion/: conversion.cpp  conversion_node.cpp  conversion_node_base.cpp  conversion_node_base.h  conversion_nodelet.cpp
stdr_velodyne/src/pointcloud/: config.cpp  defaultcal.h  pointcloud.cpp  pointcloud_node.cpp  pointcloud_node_base.cpp  pointcloud_node_base.h  pointcloud_nodelet.cpp
track_tools/: CMakeLists.txt  package.xml
track_tools/include/track_tools/: track_manager.h
track_tools/src/: track_manager.cpp
track_tools/src/prog/: track_aggregator.cpp  track_cumulator.cpp  track_stats.cpp  track_visualizer.cpp
track_tools/track_file_io/: CMakeLists.txt  package.xml  setup.py
track_tools/track_file_io/include/track_file_io/: manipulations.h  track_file_io.h
track_tools/track_file_io/msg/: Frame.msg  Track.msg  Tracks.msg
track_tools/track_file_io/src/: manipulations.cpp  test_track_file_io.cpp  track_file_io.cpp
track_tools/track_file_io/src/track_file_io/: __init__.py  _io.py
track_tools/track_file_tools/: CMakeLists.txt  package.xml
track_tools/track_file_tools/src/: aggregator.cpp  common.cpp  common.h  cumulator.cpp  manipulator.cpp  stats.cpp  track_aggregator.cpp  track_visualizer.cpp  visualizer.cpp
track_tools/track_tools/: CMakeLists.txt
track_tools/track_tools/src/: track_manager.cpp
track_tools/track_tools/src/prog/: track_aggregator.cpp
