<?xml version="1.0"?>
<package>
  <name>blf</name>
  <version>0.0.0</version>
  <description>
      Library to read/write files in BLF (Binary Log File) format (some of the
      old log files).
  </description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>stdr_lib</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>velodyne_msgs</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>stdr_velodyne</build_depend>
  <build_depend>ladybug_playback</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>stdr_lib</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>velodyne_msgs</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>stdr_velodyne</run_depend>
  <run_depend>ladybug_playback</run_depend>

</package>
