<?xml version="1.0"?>
<package>
  <name>ladybug_playback</name>
  <version>0.0.0</version>
  <description>Package to playback ladybug data.
  </description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend version_gte="1.11.3">camera_info_manager</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>stdr_lib</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>timer</build_depend>
  <build_depend>fastjpeg</build_depend>
  <build_depend>libdc1394-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend version_gte="1.11.3">camera_info_manager</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>stdr_lib</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>timer</run_depend>
  <run_depend>fastjpeg</run_depend>
  <run_depend>libdc1394-dev</run_depend>
  <run_depend>libopencv-dev</run_depend>
  
   <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
