<?xml version="1.0"?>
<package>
  <name>log_and_playback</name>
  <version>0.0.0</version>
  <description>Utilities for logging and playing back data.

  The log_run script records the raw sensor data in separate bag files.
  The raw playback scripts can read the raw sensor data from bag files and
  DGC files, and play it back while launching the appropriate nodes to
  recreate most of the data used for perception: velodyne points, localization
  information, etc.
  </description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>

  <license>TODO</license>

  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosbag_storage</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>stdr_lib</build_depend>
  <build_depend>blf</build_depend>
  <build_depend>dgc_transform</build_depend>
  <build_depend>localize</build_depend>
  <build_depend>stdr_velodyne</build_depend>
  <build_depend>ladybug_playback</build_depend>
  <build_depend>gperftools_21</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag_storage</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>stdr_lib</run_depend>
  <run_depend>blf</run_depend>
  <run_depend>dgc_transform</run_depend>
  <run_depend>localize</run_depend>
  <run_depend>stdr_velodyne</run_depend>
  <run_depend>ladybug_playback</run_depend>
  <run_depend>gperftools_21</run_depend>

</package>
