<?xml version="1.0"?>
<package>
  <name>stdr_velodyne</name>
  <version>0.0.0</version>
  <description>The stdr_velodyne package provides a library and nodes / nodelets to
    - read/write LLF files (old DGC log files)
    - read bags with RawScans message types (used from Nov 2012 to Nov 2013).
    - convert raw velodyne packets into point cloud, using velodyne intrinsic
      parameters computed by Jesse.

  For the velodyne driver, use ROS's standard velodyne driver.
  </description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>stdr_msgs</build_depend>
  <build_depend>stdr_lib</build_depend>
  <build_depend>bag_of_tricks</build_depend>
  <build_depend>libpcl-all-dev</build_depend>


  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
  <run_depend>stdr_msgs</run_depend>
  <run_depend>stdr_lib</run_depend>
  <run_depend>bag_of_tricks</run_depend>
  <run_depend>libpcl-all</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
