<?xml version="1.0"?>
<package>
  <name>track_file_tools</name>
  <version>0.0.0</version>
  <description>Some programs to manipulate and work with the track
      files.
  </description>

  <maintainer email="brice.rebsamen@gmail.com">Brice Rebsamen</maintainer>
  <license>TODO</license>

  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>track_file_io</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>track_file_io</run_depend>
  <run_depend>libpcl-all</run_depend>
</package>
